HOME & BLOG: fix 2x log images (better overlap) HOME: rename anchor.js to blog.js

--- a/blog/css/blog.scss
+++ b/blog/css/blog.scss
@@ -341,7 +341,7 @@ td {
   #jn-logo {
     top: 20px;
     width: 400px;
-    height: 120px;
+    height: 124px;
   }
   #header {
     height: 220px;
